--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "joi": "^17.11.0",
     "morgan": "^1.10.0",
     "pg": "^8.11.3",
+    "react-icons": "^5.0.1",
     "sequelize": "^6.33.0"
   },
   "jest": {
